--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 axum = { version = "0.8.6", features = ["http2", "macros", "multipart", "ws"] }
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
 embed_anything = "0.6.4"
 pdf-extract = "0.10.0"
@@ -19,4 +19,4 @@ thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = "1.18.1"
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
