--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ dotenv = "0.15.0"
 pdf-extract = "0.10.0"
 elasticsearch = "8.5.0-alpha.1"
 url = "2.5.0"
-reqwest = { version = "0.12.24", features = ["json"] }
+reqwest = { version = "0.12.24", features = ["json", "stream"] }
 serde = "1.0.228"
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
@@ -24,4 +24,6 @@ tokio = { version = "1.48.0", features = ["full"] }
 tokenizers = "0.21.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tokio-stream = "0.1.14"
+futures-util = "0.3.30"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
