--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tokio-stream = "0.1.14"
 futures-util = "0.3.30"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
+tower-http = { version = "0.6.0", features = ["cors"] }
