--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ tokio-stream = "0.1.14"
 futures-util = "0.3.30"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
 tower-http = { version = "0.6.0", features = ["cors"] }
+gemini-rust = "1.5.0"
